--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Title: Perform capture-recapture estimation using decomposable graphical models
 Version: 0.8
 Date: 2014-06-11
 Author: James Johndrow and Kristian Lum
-Maintainer: Patrick Ball (pball@hrdag.org)
+Maintainer: Patrick Ball <pball@hrdag.org>
 Description: Perform capture-recapture estimation using decomposable graphical models
 License: GPL v2 or better
+LazyLoad: yes
