changes to get this puppy on cran

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: dga
 Type: Package
-Title: Perform capture-recapture estimation using decomposable graphical models
-Version: 0.8
-Date: 2014-06-11
-Author: James Johndrow and Kristian Lum
-Maintainer: Patrick Ball <pball@hrdag.org>
-Description: Perform capture-recapture estimation using decomposable graphical models
-License: GPL v2 or better
+Title: Capture-Recapture Estimation using Bayesian Model Averaging
+Version: 1.2
+Date: 2015-04-16
+Author: James Johndrow, Kristian Lum, and Patrick Ball
+Maintainer: Kristian Lum <kl@hrdag.org>
+Description: Performs Bayesian model averaging for capture-recapture. This includes code to stratify records, check the strata for suitable overlap to be used for capture-recapture, and some functions to plot the estimated population size. 
+License: GPL (>= 2)
 LazyLoad: yes
+Imports: chron
