Prepare dga update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: dga
 Type: Package
 Title: Capture-Recapture Estimation using Bayesian Model Averaging
-Version: 1.2
-Date: 2015-04-16
-Author: James Johndrow, Kristian Lum, and Patrick Ball
-Maintainer: Kristian Lum <kl@hrdag.org>
+Version: 2.0.0
+Date: 2020-10-05
+Authors@R: c(person(given="James", family="Johndrow", role=c("aut")),
+             person(given="Kristian", family="Lum", email="kl@hrdag.org", role=c("aut", "cre")),
+             person(given="Patrick", family="Ball", role=c("aut")),
+             person(given="Olivier", family="Binette", role=c("ctb")))
 Description: Performs Bayesian model averaging for capture-recapture. This includes code to stratify records, check the strata for suitable overlap to be used for capture-recapture, and some functions to plot the estimated population size. 
 License: GPL (>= 2)
 LazyLoad: yes
-Imports: chron
+NeedsCompilation: yes
+ByteCompile: yes
+Imports: chron, Rcpp
+RoxygenNote: 7.1.1
+LinkingTo: 
+    Rcpp,
+    RcppArmadillo
