--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: dga
 Type: Package
 Title: Capture-Recapture Estimation using Bayesian Model Averaging
 Version: 2.0.0
-Date: 2020-10-05
+Date: 2021-05-03
 Authors@R: c(person(given="James", family="Johndrow", role=c("aut")),
-             person(given="Kristian", family="Lum", email="kl@hrdag.org", role=c("aut", "cre")),
+             person(given="Kristian", family="Lum", email="kl@hrdag.org", role=c("aut")),
              person(given="Patrick", family="Ball", role=c("aut")),
-             person(given="Olivier", family="Binette", role=c("ctb")))
+             person(given="Olivier", family="Binette", email="olivier.binette@gmail.com", role=c("ctb",  "cre")))
 Description: Performs Bayesian model averaging for capture-recapture. This includes code to stratify records, check the strata for suitable overlap to be used for capture-recapture, and some functions to plot the estimated population size. 
 License: GPL (>= 2)
 LazyLoad: yes
