Fix role string

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2025-09-21
 Authors@R: c(person(given="James", family="Johndrow", role=c("aut")),
              person(given="Kristian", family="Lum", email="kl@hrdag.org", role=c("aut")),
              person(given="Patrick", family="Ball", role=c("aut")),
-             person(given="Olivier", family="Binette", email="olivier.binette@gmail.com", role=c("auth", "cre")))
+             person(given="Olivier", family="Binette", email="olivier.binette@gmail.com", role=c("ctb", "cre")))
 Description: Performs Bayesian model averaging for capture-recapture. This includes code to stratify records, check the strata for suitable overlap to be used for capture-recapture, and some functions to plot the estimated population size. 
 License: GPL (>= 2)
 LazyLoad: yes
